--- a/About.html
+++ b/About.html
@@ -3,31 +3,52 @@
 <html>
 	<head>
 		<title>About Page</title>
+		<link rel="stylesheet" type="text/css" href="About.css" />
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	</head>
 	
-	<link rel="stylesheet" type="text/css" href="About.css"/>
 	
 	<body>
-		<div class = "Logo">
-		<a href = "Home.html"><img src = "Mini_Tree_Logo.jpg"/></a>
+		<div id="container">
+			<div class = "Logo">	<!--div for logo-->
+				<a href = "Home.html"><img src = "Mini_Tree_Logo.jpg" alt = "logo"/></a>
+			</div>
+		
+			<div class="MenuButton">	<!--div for bonsai trees button-->
+				<div class="MenuButtonPos">
+				<a href = "Bonsai_trees.html"><img src = "Bonsai_Button.jpg" alt = "bonsai tree"/></a>
+				</div>
+			</div>
+		
+		<div class="MenuButton">	<!--div for about button-->
+			<div class="MenuButtonPos"> 
+				<img src = "About_Button_DOWN.jpg" alt = "bonsai tree"/>
+			</div>
 		</div>
-		<div class="MenuButton">
+		
+		<div class="MenuButton">	<!--div for contact button-->
 			<div class="MenuButtonPos">
-		<a href = "Bonsai_trees.html"><img src = "Bonsai_Button.jpg"/></a>
+				<a href = "Contact.html"><img src = "Contact_Button.jpg" alt = "bonsai tree"/></a>
+			</div>
 		</div>
-		<div class="MenuButton">
+		
+		<div class="MenuButton">	<!--div for FAQ button-->
 			<div class="MenuButtonPos">
-		<img src = "About_Button_DOWN.jpg"/>
+				<a href = "FAQ.html"><img src = "FAQ_Button.jpg" alt = "bonsai tree"/></a>
+			</div>
 		</div>
-		<div class="MenuButton">
-			<div class="MenuButtonPos">
-		<a href = "Contact.html"><img src = "Contact_Button.jpg"/></a>
-		</div>
-		<div class="MenuButton">
-			<div class="MenuButtonPos">
-		<a href = "FAQ.html"><img src = "FAQ_Button.jpg"/></a>
-		</div>
-		<p>Test</p>
+		<div class="cols cols5">
+			<section class="first col">
+			<div class="BodyText">
+				<p>What started out as a hobby of bonsai tree-collecting turned out to be one of Vancouver's most talked about local businesses. Mini Trees is just what we have dreamed of.
+				2009 was when the idea of opening up a bonsai tree store sparked. June and I took notice of Vancouver's lack of these miniature trees in the plant market, so we thought why not? Fast forward to 2012: The grand opening of Mini Trees!
+				Thank you for all the love and support!
+				<br></br><br>Love, June and Markus</br></p>
+				</section> <!-- end section first col -->
+				</div> <!--end of cols cols5 -->
+		</div> <!--end of bodytext div-->
+		</div> <!--end of container div-->
+		
 	</body>
 
 
