--- a/About.html
+++ b/About.html
@@ -43,7 +43,8 @@
 				<p>What started out as a hobby of bonsai tree-collecting turned out to be one of Vancouver's most talked about local businesses. Mini Trees is just what we have dreamed of.
 				2009 was when the idea of opening up a bonsai tree store sparked. June and I took notice of Vancouver's lack of these miniature trees in the plant market, so we thought why not? Fast forward to 2012: The grand opening of Mini Trees!
 				Thank you for all the love and support!
-				<br></br><br>Love, June and Markus</br></p>
+				<br>Love, June and Markus</br></p>
+				<img src = "Couple_Photo.jpg" alt = "couple photo"/>
 				</section> <!-- end section first col -->
 				</div> <!--end of cols cols5 -->
 		</div> <!--end of bodytext div-->
