--- a/About.html
+++ b/About.html
@@ -11,30 +11,30 @@
 	<body>
 		<div id="container">
 			<div class = "Logo">	<!--div for logo-->
-				<a href = "Home.html"><img src = "Mini_Tree_Logo.jpg" alt = "logo"/></a>
+				<a href = "Home.html"><img src = "images/Mini_Tree_Logo.jpg" alt = "logo"/></a>
 			</div>
 		
 			<div class="MenuButton">	<!--div for bonsai trees button-->
 				<div class="MenuButtonPos">
-				<a href = "Bonsai_trees.html"><img src = "Bonsai_Button.jpg" alt = "bonsai tree"/></a>
+				<a href = "Bonsai_trees.html"><img src = "images/Bonsai_Button.jpg" alt = "bonsai tree"/></a>
 				</div>
 			</div>
 		
 		<div class="MenuButton">	<!--div for about button-->
 			<div class="MenuButtonPos"> 
-				<img src = "About_Button_DOWN.jpg" alt = "bonsai tree"/>
+				<img src = "images/About_Button_DOWN.jpg" alt = "bonsai tree"/>
 			</div>
 		</div>
 		
 		<div class="MenuButton">	<!--div for contact button-->
 			<div class="MenuButtonPos">
-				<a href = "Contact.html"><img src = "Contact_Button.jpg" alt = "bonsai tree"/></a>
+				<a href = "Contact.html"><img src = "images/Contact_Button.jpg" alt = "bonsai tree"/></a>
 			</div>
 		</div>
 		
 		<div class="MenuButton">	<!--div for FAQ button-->
 			<div class="MenuButtonPos">
-				<a href = "FAQ.html"><img src = "FAQ_Button.jpg" alt = "bonsai tree"/></a>
+				<a href = "FAQ.html"><img src = "images/FAQ_Button.jpg" alt = "bonsai tree"/></a>
 			</div>
 		</div>
 		<div class="cols cols5">
