Changed image folder

--- a/About.html
+++ b/About.html
@@ -44,7 +44,7 @@
 				2009 was when the idea of opening up a bonsai tree store sparked. June and I took notice of Vancouver's lack of these miniature trees in the plant market, so we thought why not? Fast forward to 2012: The grand opening of Mini Trees!
 				Thank you for all the love and support!
 				<br>Love, June and Markus</br></p>
-				<img src = "Couple_Photo.jpg" alt = "couple photo"/>
+				<img src = "images/Couple_Photo.jpg" alt = "couple photo"/>
 				</section> <!-- end section first col -->
 				</div> <!--end of cols cols5 -->
 		</div> <!--end of bodytext div-->
