--- a/About.html
+++ b/About.html
@@ -46,8 +46,7 @@
 				<br><br>Love, June and Markus</br></br></p>
 					<div class ="Couple_Photo">
 						<img src = "images/Couple_Photo.jpg" alt = "couple photo"/>
-					</div>
->>>>>>> 808c83598489e097f3442dd54115e4e402ba7d77
+					</div> <!-- end Couple_Photo -->
 				</section> <!-- end section first col -->
 				</div> <!--end of cols cols5 -->
 		</div> <!--end of bodytext div-->
