--- a/About.html
+++ b/About.html
@@ -3,7 +3,7 @@
 <html>
 	<head>
 		<title>About Page</title>
-		<link rel="stylesheet" type="text/css" href="About.css" />
+		<link rel="stylesheet" type="text/css" href="style.css" />
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	</head>
 	
