--- a/Contact.html
+++ b/Contact.html
@@ -40,13 +40,12 @@
 		<div class="cols cols5">
 			<section class="first col">
 			<div class="BodyText">
-				<p>What started out as a hobby of bonsai tree-collecting turned out to be one of Vancouver's most talked about local businesses. Mini Trees is just what we have dreamed of.
-				2009 was when the idea of opening up a bonsai tree store sparked. June and I took notice of Vancouver's lack of these miniature trees in the plant market, so we thought why not? Fast forward to 2012: The grand opening of Mini Trees!
-				Thank you for all the love and support!
-				<br />Love, June and Markus</p>
-					<div class ="Couple_Photo">
-						<img src = "images/Couple_Photo.jpg" alt = "couple photo"/>
-					</div> <!-- end Couple_Photo -->
+				<p>Address: <br/>
+				1111 Paper Street <br/><br/>
+				Telephone: <br/>
+				636-555-3226 <br/><br/>
+								
+				</p>
 				</section> <!-- end section first col -->
 				</div> <!--end of cols cols5 -->
 		</div> <!--end of bodytext div-->
