--- a/FAQ.html
+++ b/FAQ.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>About Page</title>
+		<title>FAQ Page</title>
 		<link rel="stylesheet" type="text/css" href="style.css" />
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	</head>
