Adding shopping cart icon

--- a/About.html
+++ b/About.html
@@ -13,6 +13,10 @@
 			<div class = "Logo">	<!--div for logo-->
 				<a href = "Home.html"><img src = "images/Mini_Tree_Logo.jpg" alt = "logo"/></a>
 			</div>
+			
+			<div class = "shop_cart">
+				<a href = "Shop.html"><img src = "images/Shop_Cart.jpg" width="40" height="40" alt = "shopping cart"/></a>
+			</div>
 		
 			<div class="MenuButton">	<!--div for bonsai trees button-->
 				<div class="MenuButtonPos">
