--- a/FAQ.html
+++ b/FAQ.html
@@ -13,6 +13,10 @@
 			<div class = "Logo">	<!--div for logo-->
 				<a href = "Home.html"><img src = "images/Mini_Tree_Logo.jpg" alt = "logo"/></a>
 			</div>
+			
+			<div class = "shop_cart">
+				<a href = "Shop.html"><img src = "images/Shop_Cart.jpg" width="40" height="40" alt = "shopping cart"/></a>
+			</div>
 		
 			<div class="MenuButton">	<!--div for bonsai trees button-->
 				<div class="MenuButtonPos">
@@ -42,7 +46,7 @@
 			<div class="BodyText">
 				<p>FAQ<br/><br/>
 				<i>How do I take care of a bonsai tree?</i> <br/>
-				Water the bonsai tree as often as needed, preferably in the early morning, and give the tree regular weekly trims. Since our bonsai trees come with a pot and soil, there is no need to look anything else.  
+				Water the bonsai tree as often as needed, preferably in the early morning, and give the tree regular weekly trims.   
 				<br/><br/>
 				
 				<i>Can I feed my bonsai tree fertilizer to make it a big tree?</i> <br/>
