Adding titles to pages.

--- a/FAQ.html
+++ b/FAQ.html
@@ -17,6 +17,8 @@
 			<div class = "shop_cart">
 				<a href = "Shop.html"><img src = "images/Shop_Cart.jpg" width="40" height="40" alt = "shopping cart"/></a>
 			</div>
+			
+			<h1>Have any questions?</h1>
 		
 			<div class="MenuButton">	<!--div for bonsai trees button-->
 				<div class="MenuButtonPos">
