--- a/Bonsai_trees.html
+++ b/Bonsai_trees.html
@@ -17,6 +17,8 @@
 			<div class = "shop_cart">
 				<a href = "Shop.html"><img src = "images/Shop_Cart.jpg" width="40" height="40" alt = "shopping cart"/></a>
 			</div>
+			
+			<h1>View our bonsai trees:</h1>
 		
 			<div class="MenuButton">	<!--div for bonsai trees button-->
 				<div class="MenuButtonPos">
