--- a/Shop.html
+++ b/Shop.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Contact Page</title>
+		<title>Your Shopping Cart</title>
 		<link rel="stylesheet" type="text/css" href="style.css" />
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	</head>
@@ -18,7 +18,7 @@
 				<a href = "Shop.html"><img src = "images/Shop_Cart.jpg" width="40" height="40" alt = "shopping cart"/></a>
 			</div>
 			
-			<h1>Give us a call! Or visit :)</h1>
+			<h1>Your Shopping Cart:</h1>
 		
 			<div class="MenuButton">	<!--div for bonsai trees button-->
 				<div class="MenuButtonPos">
@@ -45,13 +45,7 @@
 		</div>
 		<div class="cols cols5">
 			<section class="first col">
-			<div class="BodyText">
-				<p>Address: <br/>
-				1111 Paper Street <br/><br/>
-				Telephone: <br/>
-				636-555-3226 <br/><br/>
-								
-				</p>
+			
 				</section> <!-- end section first col -->
 				</div> <!--end of cols cols5 -->
 		</div> <!--end of bodytext div-->
