Made validation changes to FAQ page

--- a/FAQ.html
+++ b/FAQ.html
@@ -40,7 +40,7 @@
 		
 		<div class="MenuButton">	<!--div for FAQ button-->
 			<div class="MenuButtonPos">
-				<img src = "images/FAQ_Button_DOWN.jpg" alt = "bonsai tree"/></a>
+				<img src = "images/FAQ_Button_DOWN.jpg" alt = "bonsai tree"/>
 			</div>
 		</div>
 		<div class="cols cols5">
@@ -63,9 +63,9 @@
 				Unfortunately due the to nature of our delicate bonsai trees, we do not ship internationally. 
 				
 				</p>
-				</section> <!-- end section first col -->
-				</div> <!--end of cols cols5 -->
-		</div> <!--end of bodytext div-->
+		</div> <!--end of cols cols5 -->				
+			</section> <!-- end section first col -->
+			</div> <!--end of bodytext div-->
 		</div> <!--end of container div-->
 		
 	</body>
