Working on shopping cart page

--- a/Shop.html
+++ b/Shop.html
@@ -45,10 +45,30 @@
 		</div>
 		<div class="cols cols5">
 			<section class="first col">
-			
+			<div class="table">
+				<table border="0">	<!--Table section for shopping from: http://www.w3schools.com/tags/tryit.asp?filename=tryhtml_table_test-->
+						<tr>
+							<th>Product Name</th>
+							<th>Quantity</th>
+							<th>Price</th>
+							<th>Total</th>
+										</tr>
+										<tr>
+										<td>Tree 1</td>
+										<td>2</td>
+										<td>$60</td>
+										</tr>
+										<tr>
+										<td>Tree 2</td>
+										<td>1</td>
+										<td>$45</td>
+										<td>$105</td>
+										</tr>
+							</table>
+				</div>
 				</section> <!-- end section first col -->
-				</div> <!--end of cols cols5 -->
-		</div> <!--end of bodytext div-->
+				
+		</div> <!--end of cols cols5-->
 		</div> <!--end of container div-->
 		
 	</body>
