Adding Product page!

--- a/Bonsai_trees.html
+++ b/Bonsai_trees.html
@@ -47,7 +47,7 @@
 			<section class="first col">
 			
 				<div class="Bonsai_tree_gallery">
-					<img src = "images/Bonsai/Bonsai1.jpg" width="150" height="200" alt = "Bonsai Tree" />
+					<a href = "Product_page.html"><img src = "images/Bonsai/Bonsai1.jpg" width="150" height="200" alt = "Bonsai Tree" /></a>
 					<div class="tree_name"><p>Tree 1: Price:$30</p></div>
 				</div>
 				
