Quick text edit

--- a/Product_page.html
+++ b/Product_page.html
@@ -48,7 +48,7 @@
 			<div class="product_photo">
 				<img src = "images/Bonsai/Bonsai1.jpg" width="150" height="200" alt = "bonsai tree"/>
 				<div class = "ProductText">
-					<p>Tree 1 <br />Your bones don't break, mine do.<br />That's clear.Your cells react to bacteria <br />and viruses differently than mine.<br />You don't get sick, I do. However unreal <br />it may seem, we are connected, you and I.</p>
+					<p><b>Tree 1</b><br />Your bones don't break, mine do.<br />That's clear.Your cells react to bacteria <br />and viruses differently than mine.<br />You don't get sick, I do. However unreal <br />it may seem, we are connected, you and I.</p>
 				</div>
 			</section> <!-- end section first col -->
 				</div> <!--end of cols cols5 -->
