Adding buttons to shop and product page

--- a/Product_page.html
+++ b/Product_page.html
@@ -47,6 +47,9 @@
 			<section class="first col">
 			<div class="product_photo">
 				<img src = "images/Bonsai/Bonsai1.jpg" width="150" height="200" alt = "bonsai tree"/>
+				<div class = "Continue_shop">
+					<a href = "Bonsai_trees.html"><img src = "images/Continue_Shop.jpg" alt = "Continue shopping"/></a>
+				</div>
 				<div class = "ProductText">
 					<p><b>Tree 1</b><br />Your bones don't break, mine do.<br />That's clear.Your cells react to bacteria <br />and viruses differently than mine.<br />You don't get sick, I do. However unreal <br />it may seem, we are connected, you and I.</p>
 				</div>
