--- a/Shop.html
+++ b/Shop.html
@@ -3,7 +3,7 @@
 <html>
 	<head>
 		<title>Your Shopping Cart</title>
-		<link rel="stylesheet" type="text/css" href="style.css" />
+		<link rel="stylesheet" type="text/css" href="shop.css" />
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	</head>
 	
@@ -34,7 +34,7 @@
 		
 		<div class="MenuButton">	<!--div for contact button-->
 			<div class="MenuButtonPos">
-				<img src = "images/Contact_Button_DOWN.jpg" alt = "bonsai tree"/>
+				<a href="Contact.html"><img src = "images/Contact_Button.jpg" alt = "bonsai tree"/></a>
 			</div>
 		</div>
 		
@@ -65,7 +65,14 @@
 										<td>$105</td>
 										</tr>
 							</table>
+								<div class="Continue_shop">
+									<a href="Bonsai_trees.html"><img src="images/Continue_shop.jpg" alt="Continue Shopping"/></a>
+								</div>
+								<div class="Checkout">
+									<a href="Checkout.html"><img src="images/Checkout_Button.jpg" alt="Checkout"/></a>
+								</div>
 				</div>
+			
 			</section> <!-- end section first col -->
 				
 		</div> <!--end of cols cols5-->
