Editing product page s'more

--- a/Product_page.html
+++ b/Product_page.html
@@ -34,7 +34,7 @@
 		
 		<div class="MenuButton">	<!--div for contact button-->
 			<div class="MenuButtonPos">
-				<img src = "images/Contact_Button_DOWN.jpg" alt = "bonsai tree"/>
+				<a href="Contact.html"><img src = "images/Contact_Button.jpg" alt = "bonsai tree"/></a>
 			</div>
 		</div>
 		
@@ -48,7 +48,10 @@
 			<div class="product_photo">
 				<img src = "images/Bonsai/Bonsai1.jpg" width="150" height="200" alt = "bonsai tree"/>
 				<div class = "Continue_shop">
-					<a href = "Bonsai_trees.html"><img src = "images/Continue_Shop.jpg" alt = "Continue shopping"/></a>
+					<a href = "Bonsai_trees.html"><img src = "images/Continue_Shop.png" alt = "Continue shopping"/></a>
+				</div>
+				<div class = "add_item">
+					<a href = "Shop.html"><img src = "images/add_item.png" alt = "Add Item"/></a>
 				</div>
 				<div class = "ProductText">
 					<p><b>Tree 1</b><br />Your bones don't break, mine do.<br />That's clear.Your cells react to bacteria <br />and viruses differently than mine.<br />You don't get sick, I do. However unreal <br />it may seem, we are connected, you and I.</p>
