--- a/Shop.html
+++ b/Shop.html
@@ -66,10 +66,10 @@
 										</tr>
 							</table>
 								<div class="Continue_shop">
-									<a href="Bonsai_trees.html"><img src="images/Continue_shop.jpg" alt="Continue Shopping"/></a>
+									<a href="Bonsai_trees.html"><img src="images/Continue_shop.png" alt="Continue Shopping"/></a>
 								</div>
 								<div class="Checkout">
-									<a href="Checkout.html"><img src="images/Checkout_Button.jpg" alt="Checkout"/></a>
+									<a href="Checkout.html"><img src="images/Checkout_Button.png" alt="Checkout"/></a>
 								</div>
 				</div>
 			
