Working on homepage

--- a/Home.html
+++ b/Home.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Mini Trees</title>
+		<title>About Page</title>
 		<link rel="stylesheet" type="text/css" href="style.css" />
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	</head>
@@ -18,10 +18,10 @@
 				<a href = "Shop.html"><img src = "images/Shop_Cart.jpg" width="40" height="40" alt = "shopping cart"/></a>
 			</div>
 			
-			<!-- <h1>Hi there!</h1> -->
+			<h1>Hi there!</h1>
 		
 			<div class="MenuButton">	<!--div for bonsai trees button-->
-				<dsiv class="MenuButtonPos">
+				<div class="MenuButtonPos">
 				<a href = "Bonsai_trees.html"><img src = "images/Bonsai_Button.jpg" alt = "bonsai tree"/></a>
 				</div>
 			</div>
@@ -46,9 +46,13 @@
 		<div class="cols cols5">
 			<section class="first col">
 			<div class="BodyText">
-				<p>What started out as a hobby of bonsai tree-collecting turned out to be one of Vancouver's most talked about local businesses. Mini Trees is just what we have dreamed of.
-				2009 was when the idea of opening up a bonsai tree store sparked. June and I took notice of Vancouver's lack of these miniature trees in the plant market, so we thought why not? Fast forward to 2012: The grand opening of Mini Trees!
-				Thank you for all the love and support!</p>
+				<p>
+				<h2>Updates</h2>
+				</p>
+				<p>
+				We are honoured to have been a part of Green Living Magazine’s June 2013 issue! When you get the chance to pick up the new issue, check out our interview with local botanist, Jenna Loiusa Smith!
+				</p>
+					
 				</section> <!-- end section first col -->
 			</div> <!--end of cols cols5 -->
 		</div> <!--end of bodytext div-->
