Updated logo image and headlines. Still need to validate

--- a/Bonsai_trees.html
+++ b/Bonsai_trees.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Bonsai Trees Page</title>
+		<title>Shop Bonsai Trees</title>
 		<link rel="stylesheet" type="text/css" href="bonsai_style.css" />
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	</head>
@@ -11,15 +11,13 @@
 	<body>
 		<div id="container">
 			<div class = "Logo">	<!--div for logo-->
-				<a href = "Home.html"><img src = "images/Mini_Tree_Logo.jpg" alt = "logo"/></a>
+				<a href = "Home.html"><img src = "images/Mini_Tree_Logo02.png" alt = "logo"/></a>
 			</div>
 			
 			<div class = "shop_cart">
 				<a href = "Shop.html"><img src = "images/Shop_Cart.jpg" width="40" height="40" alt = "shopping cart"/></a>
 			</div>
-			
-			<h1>View our bonsai trees:</h1>
-		
+					
 			<div class="MenuButton">	<!--div for bonsai trees button-->
 				<div class="MenuButtonPos">
 				<img src = "images/Bonsai_Button_DOWN.jpg" alt = "Menu Button"/></a>
@@ -45,6 +43,9 @@
 			
 		<div class="cols cols5">
 			<section class="first col">
+				<p>
+					<h1>Shop Bonsai Trees</h1>
+				</p>
 			
 				<div class="Bonsai_tree_gallery">
 					<a href = "Product_page.html"><img src = "images/Bonsai/Bonsai1.jpg" width="150" height="200" alt = "Bonsai Tree" /></a>
