--- a/About.html
+++ b/About.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>About Page</title>
+		<title>About Mini Trees</title>
 		<link rel="stylesheet" type="text/css" href="style.css" />
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	</head>
@@ -11,15 +11,13 @@
 	<body>
 		<div id="container">
 			<div class = "Logo">	<!--div for logo-->
-				<a href = "Home.html"><img src = "images/Mini_Tree_Logo.jpg" alt = "logo"/></a>
+				<a href = "Home.html"><img src = "images/Mini_Tree_Logo02.png" alt = "logo"/></a>
 			</div>
 			
 			<div class = "shop_cart">
 				<a href = "Shop.html"><img src = "images/Shop_Cart.jpg" width="40" height="40" alt = "shopping cart"/></a>
 			</div>
-			
-			<h1>Hi there!</h1>
-		
+					
 			<div class="MenuButton">	<!--div for bonsai trees button-->
 				<div class="MenuButtonPos">
 				<a href = "Bonsai_trees.html"><img src = "images/Bonsai_Button.jpg" alt = "bonsai tree"/></a>
@@ -46,10 +44,19 @@
 		<div class="cols cols5">
 			<section class="first col">
 			<div class="BodyText">
-				<p>What started out as a hobby of bonsai tree-collecting turned out to be one of Vancouver's most talked about local businesses. Mini Trees is just what we have dreamed of.
-				2009 was when the idea of opening up a bonsai tree store sparked. June and I took notice of Vancouver's lack of these miniature trees in the plant market, so we thought why not? Fast forward to 2012: The grand opening of Mini Trees!
-				Thank you for all the love and support!
-				<br />Love, June and Markus</p>
+				<p>
+					<h1>About Mini Trees</h1>
+				</p>
+				<p>
+					What started out as a hobby of bonsai tree-collecting turned out to be one of Vancouver's most talked about local businesses. Mini Trees is just what we have dreamed of.
+				</p>
+				<p>
+					2009 was when the idea of opening up a bonsai tree store sparked. June and I took notice of Vancouver's lack of these miniature trees in the plant market, so we thought why not? Fast forward to 2012: The grand opening of Mini Trees!
+					Thank you for all the love and support!
+				</p>
+				<p>
+					Love, June and Markus
+				</p>
 					<div class ="Couple_Photo">
 						<img src = "images/Couple_Photo.jpg" alt = "couple photo"/>
 					</div> <!-- end Couple_Photo -->
