--- a/Contact.html
+++ b/Contact.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Contact Page</title>
+		<title>Contact Mini Trees</title>
 		<link rel="stylesheet" type="text/css" href="style.css" />
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	</head>
@@ -11,15 +11,13 @@
 	<body>
 		<div id="container">
 			<div class = "Logo">	<!--div for logo-->
-				<a href = "Home.html"><img src = "images/Mini_Tree_Logo.jpg" alt = "logo"/></a>
+				<a href = "Home.html"><img src = "images/Mini_Tree_Logo02.png" alt = "logo"/></a>
 			</div>
 			
 			<div class = "shop_cart">
 				<a href = "Shop.html"><img src = "images/Shop_Cart.jpg" width="40" height="40" alt = "shopping cart"/></a>
 			</div>
-			
-			<h1>Give us a call! Or visit :)</h1>
-		
+					
 			<div class="MenuButton">	<!--div for bonsai trees button-->
 				<div class="MenuButtonPos">
 				<a href = "Bonsai_trees.html"><img src = "images/Bonsai_Button.jpg" alt = "bonsai tree"/></a>
@@ -46,11 +44,13 @@
 		<div class="cols cols5">
 			<section class="first col">
 			<div class="BodyText">
+				<p>
+					<h1>Contact Mini Trees</h1>
+				</p>
 				<p>Address: <br/>
 				1111 Paper Street <br/><br/>
 				Telephone: <br/>
-				636-555-3226 <br/><br/>
-								
+				636-555-3226 <br/><br/>	
 				</p>
 			</section> <!-- end section first col -->
 				</div> <!--end of cols cols5 -->
