--- a/FAQ.html
+++ b/FAQ.html
@@ -11,15 +11,13 @@
 	<body>
 		<div id="container">
 			<div class = "Logo">	<!--div for logo-->
-				<a href = "Home.html"><img src = "images/Mini_Tree_Logo.jpg" alt = "logo"/></a>
+				<a href = "Home.html"><img src = "images/Mini_Tree_Logo02.png" alt = "logo"/></a>
 			</div>
 			
 			<div class = "shop_cart">
 				<a href = "Shop.html"><img src = "images/Shop_Cart.jpg" width="40" height="40" alt = "shopping cart"/></a>
 			</div>
-			
-			<h1>Have any questions?</h1>
-		
+					
 			<div class="MenuButton">	<!--div for bonsai trees button-->
 				<div class="MenuButtonPos">
 				<a href = "Bonsai_trees.html"><img src = "images/Bonsai_Button.jpg" alt = "bonsai tree"/></a>
@@ -46,7 +44,11 @@
 		<div class="cols cols5">
 			<section class="first col">
 			<div class="BodyText">
-				<p>FAQ<br/><br/>
+				<p>
+					<h1>Frequently Asked Questions</h1>
+				</p>
+				
+				<p>
 				<i>How do I take care of a bonsai tree?</i> <br/>
 				Water the bonsai tree as often as needed, preferably in the early morning, and give the tree regular weekly trims.   
 				<br/><br/>
