--- a/Home.html
+++ b/Home.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>About Page</title>
+		<title>Mini Trees</title>
 		<link rel="stylesheet" type="text/css" href="style.css" />
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	</head>
@@ -11,15 +11,13 @@
 	<body>
 		<div id="container">
 			<div class = "Logo">	<!--div for logo-->
-				<a href = "Home.html"><img src = "images/Mini_Tree_Logo.jpg" alt = "logo"/></a>
+				<a href = "Home.html"><img src = "images/Mini_Tree_Logo02.png" alt = "logo"/></a>
 			</div>
 			
 			<div class = "shop_cart">
 				<a href = "Shop.html"><img src = "images/Shop_Cart.jpg" width="40" height="40" alt = "shopping cart"/></a>
 			</div>
-			
-			<h1>Hi there!</h1>
-		
+					
 			<div class="MenuButton">	<!--div for bonsai trees button-->
 				<div class="MenuButtonPos">
 				<a href = "Bonsai_trees.html"><img src = "images/Bonsai_Button.jpg" alt = "bonsai tree"/></a>
@@ -48,10 +46,10 @@
 			<section class="first col">
 			<div class="BodyText">
 				<p>
-				<h2>Updates</h2>
+					<h1>Updates</h1>
 				</p>
 				<p>
-				We are honoured to have been a part of Green Living Magazine’s June 2013 issue! When you get the chance to pick up the new issue, check out our interview with local botanist, Jenna Loiusa Smith!
+					We are honoured to have been a part of Green Living Magazine’s June 2013 issue! When you get the chance to pick up the new issue, check out our interview with local botanist, Jenna Loiusa Smith!
 				</p>
 					
 				</section> <!-- end section first col -->
