--- a/Shop.html
+++ b/Shop.html
@@ -11,7 +11,7 @@
 	<body>
 		<div id="container">
 			<div class = "Logo">	<!--div for logo-->
-				<a href = "Home.html"><img src = "images/Mini_Tree_Logo.jpg" alt = "logo"/></a>
+				<a href = "Home.html"><img src = "images/Mini_Tree_Logo02.png" alt = "logo"/></a>
 			</div>
 			
 			<div class = "shop_cart">
