--- a/Confirm.html
+++ b/Confirm.html
@@ -48,21 +48,8 @@
 					<h1>Checkout Process</h1>
 				</p>
 				<p>
-					Credit Card no. :
+					Your order has been complete. Thank you for shopping with us!
 				</p>
-				<p>
-					Billing address :
-				</p>
-				<p>
-					Shipping address : 
-				</p>
-				<div class="Checkout">
-					<a href="Confirm.html"><img src="images/Complete_Order.png" alt = "Complete Order" /></a>
-				</div> <!-- end of Checkout div -->
-				
-				<div class="Continue_shop">
-					<a href="Shop.html"><img src="images/BacktoCart.png" alt = "Back to Cart" /></a>
-				</div> <!-- end of Continue_shop div -->
 				
 			</section> <!-- end section first col -->
 				</div> <!--end of cols cols5 -->
