--- a/Shop.html
+++ b/Shop.html
@@ -43,39 +43,37 @@
 				<a href = "FAQ.html"><img src = "images/FAQ_Button.jpg" alt = "bonsai tree"/></a>
 			</div>
 		</div>
-		<div class="cols cols5">
-			<section class="first col">
-			<div class="table">
-				<table border="0">	<!--Table section for shopping from: http://www.w3schools.com/tags/tryit.asp?filename=tryhtml_table_test-->
-						<tr>
-							<th>Product Name</th>
-							<th>Quantity</th>
-							<th>Price</th>
-							<th>Total</th>
-										</tr>
-										<tr>
-										<td>Tree 1</td>
-										<td>2</td>
-										<td>$60</td>
-										</tr>
-										<tr>
-										<td>Tree 2</td>
-										<td>1</td>
-										<td>$45</td>
-										<td>$105</td>
-										</tr>
-							</table>
+			<div class="cols cols5">
+				<section class="first col">
+					<div class="table">
+						<table>	<!--Table section for shopping from: http://www.w3schools.com/tags/tryit.asp?filename=tryhtml_table_test-->
+								<tr>
+									<th>Product Name</th>
+									<th>Quantity</th>
+									<th>Price</th>
+									<th>Total</th>
+												</tr>
+												<tr>
+												<td>Tree 1</td>
+												<td>2</td>
+												<td>$60</td>
+												</tr>
+												<tr>
+												<td>Tree 2</td>
+												<td>1</td>
+												<td>$45</td>
+												<td>$105</td>
+												</tr>
+						</table>
 								<div class="Continue_shop">
 									<a href="Bonsai_trees.html"><img src="images/Continue_shop.png" alt="Continue Shopping"/></a>
 								</div>
 								<div class="Checkout">
 									<a href="Checkout.html"><img src="images/Checkout_Button.png" alt="Checkout"/></a>
 								</div>
-				</div>
-			
-			</section> <!-- end section first col -->
-				
-		</div> <!--end of cols cols5-->
+					</div>
+				</section> <!-- end section first col -->
+			</div> <!--end of cols cols5-->
 		</div> <!--end of container div-->
 		
 	</body>
