--- a/Checkout.html
+++ b/Checkout.html
@@ -61,9 +61,9 @@
 						<div class="Continue_shop">
 							<a href="Shop.html"><img src="images/BacktoCart.png" alt = "Back to Cart" /></a>
 						</div> <!-- end of Continue_shop div -->
-					</div> <!--end of cols cols5 -->
+					</div> <!--end of body text-->
 				</section> <!-- end section first col -->
-			</div> <!--end of bodytext div-->
+			</div> <!--end of cols cols5-->
 		</div> <!--end of container div-->
 	</body>
 
