Made small alterations to positions of button
Reminder to validate again!

--- a/Shop.html
+++ b/Shop.html
@@ -17,9 +17,7 @@
 			<div class = "shop_cart">
 				<a href = "Shop.html"><img src = "images/Shop_Cart.jpg" width="40" height="40" alt = "shopping cart"/></a>
 			</div>
-			
-			<h1>Your Shopping Cart:</h1>
-		
+					
 			<div class="MenuButton">	<!--div for bonsai trees button-->
 				<div class="MenuButtonPos">
 				<a href = "Bonsai_trees.html"><img src = "images/Bonsai_Button.jpg" alt = "bonsai tree"/></a>
@@ -45,6 +43,9 @@
 		</div>
 			<div class="cols cols5">
 				<section class="first col">
+					<p>
+						<h1>Your Shopping Cart</h1>
+					</p>
 					<div class="table">
 						<table>	<!--Table section for shopping from: http://www.w3schools.com/tags/tryit.asp?filename=tryhtml_table_test-->
 								<tr>
@@ -71,6 +72,7 @@
 								<div class="Checkout">
 									<a href="Checkout.html"><img src="images/Checkout_Button.png" alt="Checkout"/></a>
 								</div>
+								<br/>
 					</div>
 				</section> <!-- end section first col -->
 			</div> <!--end of cols cols5-->
