--- a/Product_page.html
+++ b/Product_page.html
@@ -17,9 +17,7 @@
 			<div class = "shop_cart">
 				<a href = "Shop.html"><img src = "images/Shop_Cart.jpg" width="40" height="40" alt = "shopping cart"/></a>
 			</div>
-			
-			<h1>Tree 1</h1>
-		
+
 			<div class="MenuButton">	<!--div for bonsai trees button-->
 				<div class="MenuButtonPos">
 				<a href = "Bonsai_trees.html"><img src = "images/Bonsai_Button.jpg" alt = "bonsai tree"/></a>
@@ -45,8 +43,11 @@
 		</div>
 			<div class="cols cols5">
 				<section class="first col">
+					<p>
+						<h1>Tree 1</h1>
+					</p>
 					<div class="product_photo">
-						<img src = "images/Bonsai/Bonsai1.jpg" width="150" height="200" alt = "bonsai tree"/>
+						<img src = "images/Bonsai/Bonsai1.jpg" width="150" height="200" alt = "bonsai tree"/> <br/>
 						<div class = "Continue_shop">
 							<a href = "Bonsai_trees.html"><img src = "images/Continue_Shop.png" alt = "Continue shopping"/></a>
 						</div>
@@ -54,7 +55,7 @@
 							<a href = "Shop.html"><img src = "images/add_item.png" alt = "Add Item"/></a>
 						</div>
 						<div class = "ProductText">
-							<p><b>Tree 1</b><br />Your bones don't break, mine do.<br />That's clear.Your cells react to bacteria <br />and viruses differently than mine.<br />You don't get sick, I do. However unreal <br />it may seem, we are connected, you and I.</p>
+							<p>Your bones don't break, mine do.<br />That's clear.Your cells react to bacteria <br />and viruses differently than mine.<br />You don't get sick, I do. However unreal <br />it may seem, we are connected, you and I.</p>
 						</div>
 					</div> <!--end of cols cols5 -->
 				</section> <!-- end section first col -->
