Updating the Home page's content

--- a/Home.html
+++ b/Home.html
@@ -45,9 +45,9 @@
 			<div class="cols cols5">
 				<section class="first col">
 					<div class="BodyText">
-							<h1>Updates</h1>
+							<h1>What is Bonsai?</h1>
 						<p>
-							We are honoured to have been a part of Green Living Magazine’s June 2013 issue! When you get the chance to pick up the new issue, check out our interview with local botanist, Jenna Loiusa Smith!
+							Bonsai is the ancient Japanese art form of carefully directing the growth of miniature trees. <br /><br />It requires creativity, contemplation and a steady, careful hand to achieve the minimal aesthetic that bonsai trees bring to a home. <br /><br />The goal of the artist is to keep the bonsai tree asymmetrical, proportional to a large tree and to leave as little trace of their craft as possible.
 						</p>
 					</div> <!--end of cols cols5 -->
 				</section> <!-- end section first col -->	
