--- a/Home.html
+++ b/Home.html
@@ -49,6 +49,8 @@
 						<p>
 							Bonsai is the ancient Japanese art form of carefully directing the growth of miniature trees. <br /><br />It requires creativity, contemplation and a steady, careful hand to achieve the minimal aesthetic that bonsai trees bring to a home. <br /><br />The goal of the artist is to keep the bonsai tree asymmetrical, proportional to a large tree and to leave as little trace of their craft as possible.
 						</p>
+							<h1>How to care for Bonsai Trees</h1>
+						<p>Illustrations of watering, pruning bonsai trees + descriptions of techniques</p>
 					</div> <!--end of cols cols5 -->
 				</section> <!-- end section first col -->	
 			</div> <!--end of bodytext div-->
