adding the update page

--- a/About.html
+++ b/About.html
@@ -40,7 +40,13 @@
 			<div class="MenuButtonPos">
 				<a href = "FAQ.html"><img src = "images/FAQ_Button.jpg" alt = "bonsai tree"/></a>
 			</div>
+			
+		<div class="MenuButton">	<!--div for FAQ button-->
+			<div class="MenuButtonPos">
+				<a href = "Updates.html"><img src = "images/Updates_Button.png" alt = "bonsai tree"/></a>
+			</div>
 		</div>
+		
 			<div class="cols cols5">
 				<section class="first col">
 					<div class="BodyText">
