--- a/Home.html
+++ b/Home.html
@@ -42,6 +42,12 @@
 			</div>
 		</div>
 		
+		<div class="MenuButton">	<!--div for FAQ button-->
+			<div class="MenuButtonPos">
+				<a href = "Updates.html"><img src = "images/Updates_Button.png" alt = "bonsai tree"/></a>
+			</div>
+		</div>
+		
 			<div class="cols cols5">
 				<section class="first col">
 					<div class="BodyText">
