--- a/Bonsai_trees.html
+++ b/Bonsai_trees.html
@@ -36,10 +36,16 @@
 			</div>
 		</div>
 		
-			<div class="MenuButton">	<!--div for FAQ button-->
-				<div class="MenuButtonPos">
-					<a href = "FAQ.html"><img src = "images/FAQ_Button.jpg" alt = "Menu Button"/></a>
-				</div>
+		<div class="MenuButton">	<!--div for FAQ button-->
+			<div class="MenuButtonPos">
+				<a href = "FAQ.html"><img src = "images/FAQ_Button.jpg" alt = "Menu Button"/></a>
+			</div>
+			
+		<div class="MenuButton">	<!--div for FAQ button-->
+			<div class="MenuButtonPos">
+				<a href = "Updates.html"><img src = "images/Updates_Button.png" alt = "bonsai tree"/></a>
+			</div>
+		</div>
 			
 					<div class="cols cols5">
 						<section class="first col">
