--- a/FAQ.html
+++ b/FAQ.html
@@ -41,6 +41,13 @@
 				<img src = "images/FAQ_Button_DOWN.jpg" alt = "bonsai tree"/>
 			</div>
 		</div>
+		
+		<div class="MenuButton">	<!--div for FAQ button-->
+			<div class="MenuButtonPos">
+				<a href = "Updates.html"><img src = "images/Updates_Button.png" alt = "bonsai tree"/></a>
+			</div>
+		</div>
+		
 			<div class="cols cols5">
 					<section class="first col">
 						<div class="BodyText">	
