--- a/Shop.html
+++ b/Shop.html
@@ -41,6 +41,13 @@
 				<a href = "FAQ.html"><img src = "images/FAQ_Button.jpg" alt = "bonsai tree"/></a>
 			</div>
 		</div>
+		
+		<div class="MenuButton">	<!--div for FAQ button-->
+			<div class="MenuButtonPos">
+				<a href = "Updates.html"><img src = "images/Updates_Button.png" alt = "bonsai tree"/></a>
+			</div>
+		</div>
+		
 			<div class="cols cols5">
 				<section class="first col">
 					<p>
