--- a/About.html
+++ b/About.html
@@ -4,6 +4,8 @@
 	<head>
 		<title>About Mini Trees</title>
 		<link rel="stylesheet" type="text/css" href="style.css" />
+		<link rel="stylesheet" media="(max-width:800px)" type="text/css" href="tablet.css"/> 
+		<link rel="stylesheet" media="(max-width:480px)" type="text/css" href="mobile.css"/> 
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	</head>
 	
@@ -40,6 +42,7 @@
 			<div class="MenuButtonPos">
 				<a href = "FAQ.html"><img src = "images/FAQ_Button.jpg" alt = "bonsai tree"/></a>
 			</div>
+		</div>
 			
 		<div class="MenuButton">	<!--div for FAQ button-->
 			<div class="MenuButtonPos">
