--- a/Shop.html
+++ b/Shop.html
@@ -4,6 +4,8 @@
 	<head>
 		<title>Your Shopping Cart</title>
 		<link rel="stylesheet" type="text/css" href="shop.css" />
+		<link rel="stylesheet" media="(max-width:800px)" type="text/css" href="tablet.css"/> 
+		<link rel="stylesheet" media="(max-width:480px)" type="text/css" href="mobile.css"/> 
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	</head>
 	
