adding tablet responsiveness ess ess ess

--- a/About.html
+++ b/About.html
@@ -13,18 +13,19 @@
 	<body>
 		<div id="container">
 			<div class = "Logo">	<!--div for logo-->
-				<a href = "Home.html"><img src = "images/Mini_Tree_Logo02.png" alt = "logo"/></a>
+				<a href = "Home.html"><img class ="logo" src = "images/Mini_Tree_Logo02.png" width="432" height="143" alt = "logo"/></a>
 			</div>
 			
-			<div class = "shop_cart">
-				<a href = "Shop.html"><img src = "images/Shop_Cart.jpg" width="40" height="40" alt = "shopping cart"/></a>
-			</div>
+		<div class = "shop_cart">
+			<a href = "Shop.html"><img src = "images/Shop_Cart.jpg" width="40" height="40" alt = "shopping cart"/></a>
+		</div>
 					
-			<div class="MenuButton">	<!--div for bonsai trees button-->
-				<div class="MenuButtonPos">
-				<a href = "Bonsai_trees.html"><img src = "images/Bonsai_Button.jpg" alt = "bonsai tree"/></a>
-				</div>
+		<div class="MenuButton">	<!--div for bonsai trees button-->
+			<div class="MenuButtonPos">
+			<a href = "Bonsai_trees.html"><img src = "images/Bonsai_Button.jpg" alt = "bonsai tree"/></a>
 			</div>
+		</div>
+	
 		
 		<div class="MenuButton">	<!--div for about button-->
 			<div class="MenuButtonPos"> 
@@ -52,7 +53,7 @@
 		
 			<div class="cols cols5">
 				<section class="first col">
-					<div class="BodyText">
+					<div class="AboutBodyText">
 							<h1>About Mini Trees</h1>
 						<p>
 							What started out as a hobby of bonsai tree-collecting turned out to be one of Vancouver's most talked about local businesses. Mini Trees is just what we have dreamed of.
