--- a/Updates.html
+++ b/Updates.html
@@ -2,8 +2,8 @@
 
 <html>
 	<head>
-		<title>Your Shopping Cart</title>
-		<link rel="stylesheet" type="text/css" href="shop.css" />
+		<title>Updates and Events</title>
+		<link rel="stylesheet" type="text/css" href="style.css" />
 		<link rel="stylesheet" media="(max-width:800px)" type="text/css" href="tablet.css"/> 
 		<link rel="stylesheet" media="(max-width:480px)" type="text/css" href="mobile.css"/> 
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -46,47 +46,23 @@
 		
 		<div class="MenuButton">	<!--div for FAQ button-->
 			<div class="MenuButtonPos">
-				<a href = "Updates.html"><img src = "images/Updates_Button.png" alt = "bonsai tree"/></a>
+				<img src = "images/Updates_Button_DOWN.png" alt = "bonsai tree"/>
 			</div>
 		</div>
 		
-			<div class="cols cols5">
-				<section class="first col">
-					<p>
-						<h1>Your Shopping Cart</h1>
-					</p>
-					<div class="table">
-						<table>	<!--Table section for shopping from: http://www.w3schools.com/tags/tryit.asp?filename=tryhtml_table_test-->
-								<tr>
-									<th>Product Name</th>
-									<th>Quantity</th>
-									<th>Price</th>
-									<th>Total</th>
-												</tr>
-												<tr>
-												<td>Tree 1</td>
-												<td>2</td>
-												<td>$60</td>
-												</tr>
-												<tr>
-												<td>Tree 2</td>
-												<td>1</td>
-												<td>$45</td>
-												<td>$105</td>
-												</tr>
-						</table>
-								<div class="Continue_shop">
-									<a href="Bonsai_trees.html"><img src="images/Continue_shop.png" alt="Continue Shopping"/></a>
-								</div>
-								<div class="Checkout">
-									<a href="Checkout.html"><img src="images/Checkout_Button.png" alt="Checkout"/></a>
-								</div>
-								<br/>
-					</div>
-				</section> <!-- end section first col -->
-			</div> <!--end of cols cols5-->
+				<div class="cols cols5">
+					<section class="first col">
+						<div class="BodyText">
+							<h1>Updates</h1>
+								<p><b>June 10th 2013:</b><br/>
+								Had a blast at Green Living Expo this past weekend! Check out photos of Mini Trees on <a href ="https://secure.flickr.com/">flickr</a>! <br/><br/>
+								<b>June 5th 2013:</b><br/>
+								Thanks for everyone who came out to our June Sale! It was great to see all our friends and meet new bonsai-ers!<br/><br/>	
+								</p>
+						</div> <!--end of cols cols5 -->
+					</section> <!-- end section first col -->
+				</div> <!--end of bodytext div-->
 		</div> <!--end of container div-->
-		
 	</body>
 
 
