mobile response - Only works in firefox : /

--- a/Bonsai_trees.html
+++ b/Bonsai_trees.html
@@ -22,31 +22,31 @@
 					
 			<div class="MenuButton">	<!--div for bonsai trees button-->
 				<div class="MenuButtonPos">
-				<img src = "images/Bonsai_Button_DOWN.jpg" alt = "Menu Button"/>
+				<img class ="button" src = "images/Bonsai_Button_DOWN.jpg" width="137" height="48" alt = "Menu Button"/>
 				</div>
 			</div>
 		
 		<div class="MenuButton">	<!--div for about button-->
 			<div class="MenuButtonPos"> 
-				<a href = "About.html"><img src = "images/About_Button.jpg" alt = "Menu Button"/></a>
+				<a href = "About.html"><img class ="button" src = "images/About_Button.jpg" width="137" height="48" alt = "Menu Button"/></a>
 			</div>
 		</div>
 		
 		<div class="MenuButton">	<!--div for contact button-->
 			<div class="MenuButtonPos">
-				<a href = "Contact.html"><img src = "images/Contact_Button.jpg" alt = "Menu Button"/></a>
+				<a href = "Contact.html"><img class ="button" src = "images/Contact_Button.jpg" width="137" height="48" alt = "Menu Button"/></a>
 			</div>
 		</div>
 		
 		<div class="MenuButton">	<!--div for FAQ button-->
 			<div class="MenuButtonPos">
-				<a href = "FAQ.html"><img src = "images/FAQ_Button.jpg" alt = "Menu Button"/></a>
+				<a href = "FAQ.html"><img class ="button" src = "images/FAQ_Button.jpg" width="137" height="48" alt = "Menu Button"/></a>
 			</div>
 		</div>
 			
 		<div class="MenuButton">	<!--div for FAQ button-->
 			<div class="MenuButtonPos">
-				<a href = "Updates.html"><img src = "images/Updates_Button.png" alt = "bonsai tree"/></a>
+				<a href = "Updates.html"><img class ="button" src = "images/Updates_Button.png" width="137" height="48" alt = "bonsai tree"/></a>
 			</div>
 		</div>
 			
