--- a/Updates.html
+++ b/Updates.html
@@ -22,31 +22,31 @@
 					
 			<div class="MenuButton">	<!--div for bonsai trees button-->
 				<div class="MenuButtonPos">
-				<a href = "Bonsai_trees.html"><img src = "images/Bonsai_Button.jpg" alt = "bonsai tree"/></a>
+				<a href = "Bonsai_trees.html"><img class ="button" src = "images/Bonsai_Button.jpg" width="137" height="48" alt = "bonsai tree"/></a>
 				</div>
 			</div>
 		
 		<div class="MenuButton">	<!--div for about button-->
 			<div class="MenuButtonPos"> 
-				<a href="About.html"><img src = "images/About_Button.jpg" alt = "bonsai tree"/></a>
+				<a href="About.html"><img class ="button" src = "images/About_Button.jpg" width="137" height="48" alt = "bonsai tree"/></a>
 			</div>
 		</div>
 		
 		<div class="MenuButton">	<!--div for contact button-->
 			<div class="MenuButtonPos">
-				<a href="Contact.html"><img src = "images/Contact_Button.jpg" alt = "bonsai tree"/></a>
+				<a href="Contact.html"><img class ="button" src = "images/Contact_Button.jpg" width="137" height="48" alt = "bonsai tree"/></a>
 			</div>
 		</div>
 		
 		<div class="MenuButton">	<!--div for FAQ button-->
 			<div class="MenuButtonPos">
-				<a href = "FAQ.html"><img src = "images/FAQ_Button.jpg" alt = "bonsai tree"/></a>
+				<a href = "FAQ.html"><img class ="button" src = "images/FAQ_Button.jpg" width="137" height="48" alt = "bonsai tree"/></a>
 			</div>
 		</div>
 		
 		<div class="MenuButton">	<!--div for FAQ button-->
 			<div class="MenuButtonPos">
-				<img src = "images/Updates_Button_DOWN.png" alt = "bonsai tree"/>
+				<img class ="button" src = "images/Updates_Button_DOWN.png" width="137" height="48" alt = "bonsai tree"/>
 			</div>
 		</div>
 		
