--- a/Home.html
+++ b/Home.html
@@ -3,9 +3,10 @@
 <html>
 	<head>
 		<title>Mini Trees</title>
-		<link rel="stylesheet" type="text/css" href="style.css" />
-		<link rel="stylesheet" media="(max-width:800px)" type="text/css" href="tablet.css"/> 
-		<link rel="stylesheet" media="(max-width:480px)" type="text/css" href="mobile.css"/> 
+		<link rel="stylesheet" type="text/css" href="style.css" /> <!-- stylesheet for desktop -->
+		<link rel="stylesheet" media="(max-width:800px)" type="text/css" href="tablet.css"/>  <!-- stylesheet for tablet devices -->
+		<link rel="stylesheet" media="(max-width:480px)" type="text/css" href="mobile.css"/> <!-- stylesheet for mobil devices -->
+		<link href='http://fonts.googleapis.com/css?family=Quicksand:300' rel='stylesheet' type='text/css'> <!-- Font from Google Fonts -->
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	</head>
 	
@@ -58,7 +59,9 @@
 							Bonsai is the ancient Japanese art form of carefully directing the growth of miniature trees. <br /><br />It requires creativity, contemplation and a steady, careful hand to achieve the minimal aesthetic that bonsai trees bring to a home. <br /><br />The goal of the artist is to keep the bonsai tree asymmetrical, proportional to a large tree and to leave as little trace of their craft as possible.
 						</p>
 							<h1>How to care for Bonsai Trees</h1>
-						<p>Illustrations of watering, pruning bonsai trees + descriptions of techniques</p>
+						<p>
+							<img src="images/bonsai_infographs.png" alt= "Bonsai water and trim" />
+						</p>
 					</div> <!--end of cols cols5 -->
 				</section> <!-- end section first col -->	
 			</div> <!--end of bodytext div-->
