--- a/Home.html
+++ b/Home.html
@@ -55,13 +55,16 @@
 				<section class="first col">
 					<div class="BodyText">
 							<h1>What is Bonsai?</h1>
-						<p>
-							Bonsai is the ancient Japanese art form of carefully directing the growth of miniature trees. <br /><br />It requires creativity, contemplation and a steady, careful hand to achieve the minimal aesthetic that bonsai trees bring to a home. <br /><br />The goal of the artist is to keep the bonsai tree asymmetrical, proportional to a large tree and to leave as little trace of their craft as possible.
-						</p>
+								<p>
+									Bonsai is the ancient Japanese art form of carefully directing the growth of miniature trees. <br /><br />It requires creativity, contemplation and a steady, careful hand to achieve the minimal aesthetic that bonsai trees bring to a home. <br /><br />The goal of the artist is to keep the bonsai tree asymmetrical, proportional to a large tree and to leave as little trace of their craft as possible.
+								</p>
 							<h1>How to care for Bonsai Trees</h1>
-						<p>
-							<img src="images/bonsai_infographs.png" alt= "Bonsai water and trim" />
-						</p>
+							<div class="infograph1">
+								<img src="images/bonsai_infograph1.png" alt= "Bonsai water and trim" />
+							</div>
+							<div class="infograph2">
+								<img src="images/bonsai_infograph2.png" alt= "Bonsai water and trim" />
+							</div>
 					</div> <!--end of cols cols5 -->
 				</section> <!-- end section first col -->	
 			</div> <!--end of bodytext div-->
