--- a/Checkout.html
+++ b/Checkout.html
@@ -27,75 +27,75 @@
 				</div>
 			</div>
 		
-		<div class="MenuButton">	<!--div for about button-->
-			<div class="MenuButtonPos"> 
-				<a href="About.html"><img class ="button" src = "images/About_Button.jpg" width="137" height="48" alt = "bonsai tree"/></a>
+			<div class="MenuButton">	<!--div for about button-->
+				<div class="MenuButtonPos"> 
+					<a href="About.html"><img class ="button" src = "images/About_Button.jpg" width="137" height="48" alt = "bonsai tree"/></a>
+				</div>
 			</div>
-		</div>
 		
-		<div class="MenuButton">	<!--div for contact button-->
-			<div class="MenuButtonPos">
-				<a href="Contact.html"><img class ="button" src = "images/Contact_Button.jpg" width="137" height="48" alt = "bonsai tree"/></a>
+			<div class="MenuButton">	<!--div for contact button-->
+				<div class="MenuButtonPos">
+					<a href="Contact.html"><img class ="button" src = "images/Contact_Button.jpg" width="137" height="48" alt = "bonsai tree"/></a>
+				</div>
 			</div>
-		</div>
 		
-		<div class="MenuButton">	<!--div for FAQ button-->
-			<div class="MenuButtonPos">
-				<a href = "FAQ.html"><img class ="button" src = "images/FAQ_Button.jpg" width="137" height="48" alt = "bonsai tree"/></a>
+			<div class="MenuButton">	<!--div for FAQ button-->
+				<div class="MenuButtonPos">
+					<a href = "FAQ.html"><img class ="button" src = "images/FAQ_Button.jpg" width="137" height="48" alt = "bonsai tree"/></a>
+				</div>
 			</div>
-		</div>
 		
-		<div class="MenuButton">	<!--div for FAQ button-->
-			<div class="MenuButtonPos">
-				<a href = "Updates.html"><img class ="button" src = "images/Updates_Button.png" width="137" height="48" alt = "bonsai tree"/></a>
+			<div class="MenuButton">	<!--div for FAQ button-->
+				<div class="MenuButtonPos">
+					<a href = "Updates.html"><img class ="button" src = "images/Updates_Button.png" width="137" height="48" alt = "bonsai tree"/></a>
+				</div>
 			</div>
-		</div>
 		
 			<div class="cols cols5">
 				<section class="first col">
-					<div class="BodyText">
-						<h1>Checkout Process</h1>
-						<form id="payment">
-							<p>
-								<label for="name">Name:</label>
-								<input id="name" name="name" type="text" placeholder="First and last name" required autofocus />
-							</p>
-							<p>
-								<label for="carddetail">Card Type:</label> <br/>
-							<p>
-								<input id="visa" name="cardtype" type="radio" />
-								<label for="visa">VISA</label>
-								<br/>
-								<input id="amex" name="cardtype" type="radio" />
-								<label for="amex">Amex</label>
-								<br/>
-								<input id="mastercard" name="cardtype" type="radio" />
-								<label for="mastercard">Mastercard</label>
-							</p>
-							<p>
-								<label for="name">Card No.:</label>
-								<input id="name" name="name" type="text" placeholder="XXX-XXXX-XXXX" required autofocus />
-							</p>
-							<p>
-								<label for="address">Billing Address:</label>
-								<textarea id="address" name="address" rows=3 required></textarea>
-							</p>
-							<p>
-								<label for="address">Shipping Address:</label>
-								<textarea id="address" name="address" rows=3 required></textarea>
-							</p>
+						<div class="BodyText">
+							<h1>Checkout Process</h1>
+								<form id="payment">
+									<p>
+										<label for="name">Name:</label>
+										<input id="name" name="name" type="text" placeholder="First and last name" required autofocus />
+									</p>
+									<p>
+										<label for="carddetail">Card Type:</label> <br/>
+									<p>
+										<input id="visa" name="cardtype" type="radio" />
+										<label for="visa">VISA</label>
+										<br/>
+										<input id="amex" name="cardtype" type="radio" />
+										<label for="amex">Amex</label>
+										<br/>
+										<input id="mastercard" name="cardtype" type="radio" />
+										<label for="mastercard">Mastercard</label>
+									</p>
+									<p>
+										<label for="name">Card No.:</label>
+										<input id="name" name="name" type="text" placeholder="XXX-XXXX-XXXX" required autofocus />
+									</p>
+									<p>
+										<label for="address">Billing Address:</label>
+										<textarea id="address" name="address" rows=3 required></textarea>
+									</p>
+									<p>
+										<label for="address">Shipping Address:</label>
+										<textarea id="address" name="address" rows=3 required></textarea>
+									</p>
+										
+										<div class="Checkout">
+											<a href="Confirm.html"><img src="images/Complete_Order.png" alt = "Complete Order" /></a>
+										</div> <!-- end of Checkout div -->
+										<div class="Continue_shop_checkout">
+											<a href="Shop.html"><img src="images/BacktoCart.png" alt = "Back to Cart" /></a>
+										</div> <!-- end of Continue_shop div -->
+								</form>
 						</div> <!-- ends form id -->
-						<div class="Checkout">
-							<a href="Confirm.html"><img src="images/Complete_Order.png" alt = "Complete Order" /></a>
-						</div> <!-- end of Checkout div -->
-						<div class="Continue_shop_checkout">
-							<a href="Shop.html"><img src="images/BacktoCart.png" alt = "Back to Cart" /></a>
-						</div> <!-- end of Continue_shop div -->
-						
-					</div> <!--end of body text-->
 				</section> <!-- end section first col -->
-			</div> <!--end of cols cols5-->
-		</div> <!--end of container div-->
+			</div> <!--end of body text-->
+		</div> <!--end of cols cols5-->
 	</body>
 
 
