--- a/Shop.html
+++ b/Shop.html
@@ -6,6 +6,7 @@
 		<link rel="stylesheet" type="text/css" href="shop.css" />
 		<link rel="stylesheet" media="(max-width:800px)" type="text/css" href="tablet.css"/> 
 		<link rel="stylesheet" media="(max-width:480px)" type="text/css" href="mobile.css"/> 
+		<link href='http://fonts.googleapis.com/css?family=Quicksand:300' rel='stylesheet' type='text/css'> <!-- Font from Google Fonts -->
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	</head>
 	
@@ -55,6 +56,7 @@
 					<h1>Your Shopping Cart</h1>
 					<div class="table">
 						<table>	<!--Table section for shopping from: http://www.w3schools.com/tags/tryit.asp?filename=tryhtml_table_test-->
+							<p>	
 								<tr>
 									<th>Product Name</th>
 									<th>Quantity</th>
@@ -71,7 +73,8 @@
 												<td>1</td>
 												<td>$45</td>
 												<td>$105</td>
-												</tr>
+								</tr>
+							</p>	
 						</table>
 								<div class="Continue_shop2">
 									<a href="Bonsai_trees.html"><img src="images/Continue_shop.png" alt="Continue Shopping"/></a>
