Made new content for the products

--- a/Product_page.html
+++ b/Product_page.html
@@ -54,8 +54,8 @@
 			<div class="cols cols5">
 				<section class="first col">
 					
-						<h1>Tree 1</h1>
-				
+					<h1>White/Pink Azalea</h1>
+					<br />
 					<div class="product_photo">
 						<img src = "images/Bonsai/Bonsai1.jpg" width="150" height="200" alt = "bonsai tree"/> <br/>
 						<div class = "Continue_shop">
@@ -65,7 +65,13 @@
 							<a href = "Shop.html"><img src = "images/add_item.png" alt = "Add Item"/></a>
 						</div>
 						<div class = "ProductText">
-							<p>Your bones don't break, mine do.<br />That's clear.Your cells react to bacteria <br />and viruses differently than mine.<br />You don't get sick, I do. However unreal <br />it may seem, we are connected, you and I.</p>
+							<p>
+								This lovely azalea bonsai has delicate <br /> 
+								petals of white and pink. This bonsai tree <br />
+								makes the perfect gift for any occasion!<br />
+								Our bonsai trees are most popular as <br />
+								housewarming presents.<br />
+							</p>
 						</div>
 					</div> <!--end of cols cols5 -->
 				</section> <!-- end section first col -->
