--- a/Home.html
+++ b/Home.html
@@ -56,20 +56,20 @@
 					<div class="BodyText">
 							<h1>What is Bonsai?</h1>
 								<p>
-									Bonsai is the ancient Japanese art form of carefully directing the growth of miniature trees. <br /><br />It requires creativity, contemplation and a steady, careful hand to achieve the minimal aesthetic that bonsai trees bring to a home. <br /><br />The goal of the artist is to keep the bonsai tree asymmetrical, proportional to a large tree and to leave as little trace of their craft as possible.
+									Bonsai is the ancient Japanese art form of carefully directing the growth of miniature trees. <br /><br />It requires creativity, contemplation and a steady, careful hand to achieve the minimal aesthetic that bonsai trees bring to a home. Read about how to care for them in our <a href ="FAQ.html">FAQ page</a>. <br /><br />The goal of the artist is to keep the bonsai tree asymmetrical, proportional to a large tree and to leave as little trace of their craft as possible.
 								</p>
 								<br /> 
 							<h1>Gallery</h1>
-								<p>Check out some of the amazing bonsai trees that people got from Mini Trees! Visit the <a href ="Bonsai_trees.html">online store</a> to get started, and send us your artistry later on so we can share it here, too :)</p>
+								<p>Check out some of the amazing bonsai trees that people got from Mini Trees! Visit the <a href ="Bonsai_trees.html">online store</a> to get started, and <a href="Contact.html">send us</a> your artistry later on so we can share it here, too :)</p>
 								<p>(add images of other fancy bonsai trees)</p>
 								<br />
-							<h1>How to care for Bonsai Trees</h1>
+							<!--<h1>How to care for Bonsai Trees</h1>
 							<div class="infograph1">
 								<img src="images/bonsai_infograph1.png" alt= "Bonsai water and trim" />
 							</div>
 							<div class="infograph2">
 								<img src="images/bonsai_infograph2.png" alt= "Bonsai water and trim" />
-							</div>
+							</div>-->
 					</div> <!--end of cols cols5 -->
 				</section> <!-- end section first col -->	
 			</div> <!--end of bodytext div-->
