Adding Gallery Page

--- a/Bonsai_trees.html
+++ b/Bonsai_trees.html
@@ -50,6 +50,12 @@
 				<a href = "Updates.html"><img class ="button" src = "images/Updates_Button.png" width="137" height="48" alt = "bonsai tree"/></a>
 			</div>
 		</div>
+		
+		<div class="MenuButton">	<!--div for FAQ button-->
+			<div class="MenuButtonPos">
+				<a href = "Gallery.html"><img class ="button" src = "images/Gallery_button.png" width="137" height="48" alt = "bonsai tree"/></a>
+			</div>
+		</div>
 			
 					<div class="cols cols5">
 						<section class="first col">
