--- a/Home.html
+++ b/Home.html
@@ -51,6 +51,12 @@
 			</div>
 		</div>
 		
+		<div class="MenuButton">	<!--div for FAQ button-->
+			<div class="MenuButtonPos">
+				<a href = "Gallery.html"><img class ="button" src = "images/Gallery_button.png" width="137" height="48" alt = "bonsai tree"/></a>
+			</div>
+		</div>
+		
 			<div class="cols cols5">
 				<section class="first col">
 					<div class="BodyText">
